--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "json-loader": "^0.5.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
