--- a/package.json
+++ b/package.json
@@ -6,14 +6,10 @@
   "scripts": {
     "predeploy": "pnpm run build",
     "start": "vite",
-    "dev": "node /app/node_modules/vite/bin/vite.js",
     "build": "vite build",
     "test": "vitest",
     "preview": "vite preview",
-    "preinstall": "npx only-allow pnpm",
-    "commitlint": "commitlint --edit",
-    "prepare": "pnpx husky install",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -22,11 +18,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "dotenv": "^16.3.1",
     "json-loader": "^0.5.7",
+    "pnpm": "^8.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "vite": "^4.4.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
@@ -35,7 +33,6 @@
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
-    "vite": "^4.4.0"
+    "eslint-plugin-react-refresh": "^0.4.1"
   }
 }
